Added commands in our .wtfcmd.yml

--- a/.wtfcmd.yaml
+++ b/.wtfcmd.yaml
@@ -8,16 +8,6 @@
       go install -ldflags="-s -w" blunt.sh/wtfcmd/wtf
   desc: Install the command
 
-- name: [build, b]
-  cmd:
-    bash: |
-      go run assetbuilder/build.go $(pwd)/assets && \
-      go build -ldflags="-s -w" -o wtf blunt.sh/wtfcmd/wtf
-    powershell: |
-      go run assetbuilder/build.go assets
-      go build -ldflags="-s -w" -o wtf.exe blunt.sh/wtfcmd/wtf
-  desc: Build the command
-
 - name: [test, t]
   cmd: go test blunt.sh/wtfcmd/wtf
   desc: Start tests
@@ -27,3 +17,38 @@
     bash: gofmt -s -w *.go
     powershell: foreach ($file in get-ChildItem *.go) { gofmt -s -w $file.fullname }
   desc: Format go code
+
+- group: [build, b]
+  name: for-os
+  args:
+    - name: os
+      desc: for which OS to build
+      required: true
+    - name: arch
+      desc: for which architecture to build
+      default: 386
+  cmd:
+    bash: |
+      go run assetbuilder/build.go $(pwd)/assets && \
+      env GOOS={{esc .os}} GOARCH={{esc .arch}} go build -ldflags="-s -w" -o wtf.exe blunt.sh/wtfcmd/wtf
+    powershell: |
+      go run assetbuilder/build.go assets
+      $env:GOOS = {{esc .os}}
+      $env:GOARCH = {{esc .arch}}
+      go build -ldflags="-s -w" -o wtf.{{if eq .os "windows"}}exe{{else}}{{.os}}{{end}} blunt.sh/wtfcmd/wtf
+  desc: Build the command for any OS
+
+- group: [build, b]
+  name: [windows, w]
+  cmd: wtf build for-os windows
+  desc: Build the command for windows
+
+- group: build
+  name: [osx, o]
+  cmd: wtf build for-os darwin
+  desc: Build the command for osx
+
+- group: build
+  name: [linux, l]
+  cmd: wtf build for-os linux
+  desc: Build the command for linux
