Fix travis, seriously...

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ os:
 
 script:
   - cd $GOPATH/src/blunt.sh/wtfcmd
-  - go run assetbuilder/build.go $pwd/assets
+  - go run assetbuilder/build.go $(pwd)/assets
   - go test blunt.sh/wtfcmd/wtf
   - env GOOS=windows GOARCH=386 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.exe blunt.sh/wtfcmd/wtf
   - env GOOS=darwin GOARCH=386 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.linux blunt.sh/wtfcmd/wtf
