Fix built in commands escaping

--- a/.wtfcmd.yaml
+++ b/.wtfcmd.yaml
@@ -13,6 +13,7 @@
   desc: Start tests
 
 - name: [format, f]
+  cwd: ./wtf
   cmd:
     bash: gofmt -s -w *.go
     powershell: foreach ($file in get-ChildItem *.go) { gofmt -s -w $file.fullname }
