--- a/.wtfcmd.yml
+++ b/.wtfcmd.yml
@@ -4,12 +4,12 @@
   cwd: ./src
 
 - name: [watch, w]
-  cmd: node_modules/.bin/webpack -w --config webpack.dev.js
+  cmd: node_modules/.bin/webpack -w --config webpack.config.js
   desc: Build files on source code change
   cwd: ./src
 
 - name: [serve, s]
-  cmd: node node_modules/webpack-serve/cli.js --config webpack.dev.js --port 1337 --open
+  cmd: node node_modules/webpack-serve/cli.js --config webpack.config.js --port 1337 --open
   desc: Build files on source code change and create a local server
   cwd: ./src
 
@@ -19,19 +19,15 @@
       set -e
       find . -maxdepth 1 -type f -not -name 'CNAME' -not -name '.wtfcmd.yml' -delete
       cd src
-      node node_modules/.bin/webpack --config webpack.prod.js
+      NODE_ENV='production' node node_modules/webpack/bin/webpack.js --config webpack.config.js
       rm -f ../critical.js ../critical.css
     powershell: |
       $ErrorActionPreference = "Stop"
       Remove-Item * -Exclude 'CNAME','.wtfcmd.yml','src','.git'
       cd src
-      node node_modules/.bin/webpack --config webpack.prod.js
+      $Env:NODE_ENV = 'production'
+      node node_modules/webpack/bin/webpack.js --config webpack.config.js
       Remove-Item ../critical.js
       Remove-Item ../critical.css
   desc: Build for production
   cwd: .
-
-- name: icons
-  cmd: node generate.icons.js
-  desc: Genrate icons from logo.svg
-  cwd: ./src
