--- a/src/package.json
+++ b/src/package.json
@@ -1,48 +1,46 @@
 {
-  "name": "static-site",
+  "name": "test-vue-loader",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "start": "webpack -w --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "blunt1337",
-  "license": "ISC",
+  "main": "webpack.config.js",
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.0.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "file-loader": "^1.1.11",
-    "highlight.js": "^9.12.0",
-    "html-webpack-plugin": "^3.1.0",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "markup-inline-loader": "^0.2.2",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "optimize-js-plugin": "0.0.4",
-    "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "svg2png": "^4.1.1",
     "to-ico": "^1.1.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
     "val-loader": "^1.1.0",
     "vue": "^2.5.16",
-    "vue-loader": "^14.2.2",
+    "vue-loader": "^15.0.0-beta.7",
     "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-merge": "^4.1.2",
+    "vue-template-loader": "^0.4.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
     "webpack-serve": "^0.3.1",
     "webpack-subresource-integrity": "^1.1.0-rc.4"
-  }
+  },
+  "scripts": {
+    "serve": "webpack-serve --config webpack.config.js --port 1337 --open",
+    "watch": "webpack -w --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
