--- a/src/package.json
+++ b/src/package.json
@@ -5,35 +5,35 @@
   "main": "webpack.config.js",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-plugin-vue": "^4.5.0",
     "html-webpack-plugin": "^3.2.0",
     "markup-inline-loader": "^0.2.2",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.8.3",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "optimize-js-plugin": "0.0.4",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "svg2png": "^4.1.1",
     "to-ico": "^1.1.5",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "val-loader": "^1.1.0",
     "vue": "^2.5.16",
-    "vue-loader": "^15.0.0-beta.7",
+    "vue-loader": "^15.2.0",
     "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "vue-template-loader": "^0.4.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-serve": "^0.3.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4",
+    "webpack-serve": "^1.0.2",
     "webpack-subresource-integrity": "^1.1.0-rc.4"
   },
   "scripts": {
