Compile for 64bits by default

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ script:
   - go run assetbuilder/build.go $(pwd)/assets
   - go test blunt.sh/wtfcmd/wtf
   - env GOOS=windows GOARCH=386 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.exe blunt.sh/wtfcmd/wtf
-  - env GOOS=darwin GOARCH=386 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.osx blunt.sh/wtfcmd/wtf
-  - env GOOS=linux GOARCH=386 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.linux blunt.sh/wtfcmd/wtf
+  - env GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.osx blunt.sh/wtfcmd/wtf
+  - env GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o $GOPATH/bin/wtf.linux blunt.sh/wtfcmd/wtf
   - env GOOS=linux GOARCH=arm go build -ldflags="-s -w" -o $GOPATH/bin/wtf.linux-arm blunt.sh/wtfcmd/wtf
 
 deploy:
